--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ ul {
     width: 115px;
     display: block;
     margin: 0 auto;
-    padding-bottom: 49px;
+    padding-bottom: 42px;
 }
 
 .side-navbar a {
